@@ -50,6 +50,8 @@ modinfo.php
 + _FMCONTENT_HOMEPAGE_3 
 + _FMCONTENT_HOMEPAGE_4
 + _FMCONTENT_URL_SHORT
++ _FMCONTENT_TOPICNAME
++ _FMCONTENT_TOPICNAME_DESC   
 
 * _FMCONTENT_FRIENDLYURL_DESC
 
